# TradeMaster

./: .gitignore  Dockerfile  LICENSE  README.md  __init__.py  environment.yml  metric_train_-1_agent_-1.pickle  pyproject.toml  python3.9.yaml  requirements.txt  requirements_arm.txt  setup (1).py  setup.cfg  setup.py  tea.yaml  test_function.py
agent/EIIE/: model.py  (+2 more)
auto/: DeepScalper.py  EIIE.py  IMIT.py  auto_tuning.py  feature_generation.py
competition/: competition.ipynb  data.ipynb
data/: preprocess.py
deploy/: backend_client.py  backend_client_test.py  backend_service.py  backend_service_test.py
docs/: requirements.txt
installation/: docker.md  prerequisite.md  requirements.md
requirement/: requirements.txt  requirements_arm.txt
tools/: industry_classification.npy  tmp.py
tutorial/: ClassicalRL_for_PM_on_FX.ipynb  DeepScalper_for_AT_on_Bitcoin.ipynb  EIIE_for_PM_on_DJ30.ipynb  IMIT_for_PM_on_DJ30.ipynb  SARL_for_PM_on_DJ30.ipynb  Tutorial1_DeepScalper.ipynb  Tutorial1_EIIE.ipynb  Tutorial2_DeepScalper.ipynb  Tutorial3_SARL.ipynb  Tutorial4_ETEO.ipynb  Tutorial4_PPO.ipynb  Tutorial5_ETEO.ipynb  Tutorial5_ETTO.ipynb  Tutorial6_DDQN.ipynb  Tutorial6_PPO.ipynb  Tutorial7_auto_tuning.ipynb  Tutorial8_Train_with_more_technical_indicators.ipynb  Tutorial9_Feature_Generation.ipynb  Video_Tutorial.py  Visualization.ipynb  metric_test_-1_agent_-1.pickle  metric_train_-1_agent_-1.pickle  metric_valid_-1_agent_-1.pickle
tutorials/: auto_tuning.ipynb
unit_testing/: test_core.py
教程/: Tutorial1_EIIE.ipynb  Tutorial2_DeepScalper.ipynb  Tutorial6_DDQN.ipynb
(+1191 files in other folders)
