[metadata]
name = trademaster
description = TradeMaster: A Comprehensive Toolkit for Algorithmic Trading
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = True
install_requires =
    # The requirements will be read from the requirements.txt file
    # Add the contents of the requirements.txt file here, one per line
    # Example:
    # numpy
    # pandas
    # scikit-learn

[options.extras_require]
test =
    # Add your test dependencies here, one per line
    # Example:
    # pytest
    # pytest-cov

[options.packages.find]
exclude =
    tests
